--- a/package.json
+++ b/package.json
@@ -10,20 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "@types/firebase": "^3.2.1",
+    "@types/react-toastify": "^4.1.0",
+    "axios": "^1.6.8",
     "country-state-city": "^3.2.1",
     "cropperjs": "^1.6.2",
+    "firebase": "^10.11.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.8.0",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.23.0",
+    "react-timer-hook": "^3.0.7",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-modal": "^3.16.3",
@@ -32,6 +42,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-eslint-plugin": "^6.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
