--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.8.0",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.23.0",
