--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/firebase": "^3.2.1",
     "@types/react-toastify": "^4.1.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "country-state-city": "^3.2.1",
     "cropperjs": "^1.6.2",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
+    "indian_address": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.8.0",
@@ -52,6 +56,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
+    "use-debounce": "^10.0.0",
     "vite": "^5.2.0"
   }
 }
