--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@types/firebase": "^3.2.1",
     "@types/react-toastify": "^4.1.0",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "country-state-city": "^3.2.1",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.23.0",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
