--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "country-state-city": "^3.2.1",
     "cropperjs": "^1.6.2",
+    "emoji-picker-react": "^4.9.4",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
