--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
