--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^3.4.4",
     "@types/firebase": "^3.2.1",
+    "@types/react-redux": "^7.1.33",
     "@types/react-toastify": "^4.1.0",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^1.6.8",
@@ -39,6 +40,7 @@
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^10.0.5",
