--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^3.4.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/firebase": "^3.2.1",
     "@types/react-redux": "^7.1.33",
     "@types/react-toastify": "^4.1.0",
